tests/specs/namespace_declaration.txt
# mod.ts
export namespace Namespace {}

# diagnostics
error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:1:1
  | 
1 | export namespace Namespace {}
  | ^

# output.txt
Defined in file:///mod.ts:0:1

namespace Namespace



# output.json
[
  {
    "name": "Namespace",
    "declarations": [
      {
        "location": {
          "filename": "file:///mod.ts",
          "line": 0,
          "col": 0,
          "byteIndex": 0
        },
        "declarationKind": "export",
        "kind": "namespace",
        "def": {
          "elements": []
        }
      }
    ]
  }
]
